# CryptoNews

./: Cargo.toml  README.md
data/: users.db
src/: api.rs  auth.rs  cache.rs  config.rs  db.rs  errors.rs  main.rs  models.rs  routes.rs  utils.rs
src/api/: coingecko.rs  cryptonews.rs  mod.rs
src/models/: news.rs
src/services/: cache.rs
src/static/: styles.css
src/templates/: index.html
src/web/static/: script.js  styles.css
src/web/templates/: index.html
