[package]
name = "crypto-news-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] } # Ensure tokio is included if you're using it
redis = "0.23"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls"] }
dotenv = "0.15"