[package]
name = "crypto_news"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
futures-util = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite", "migrate", "chrono"] }
bcrypt = "0.15"
